--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@picocss/pico": "^1.5.10",
+    "airtable": "^0.12.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
